# shardate

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
src/carve/: __init__.py  read.py
src/shardate/: __init__.py  dates.py  read.py  shardate.py  utils.py
tests/: test_dates.py  test_init.py  test_read.py  test_shardate.py
