[project]
name = "carve"
version = "0.1.0"
description = "A lightweight Python library for efficiently reading year-month-day partitioned Parquet datasets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark>=4.0.0",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
