[project]
name = "shardate"
version = "0.1.1"
description = "A lightweight Python library for efficiently reading year-month-day partitioned Parquet datasets."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Yoichi Ojima", email = "yoichiojima@gmail.com"}
]
license = {text = "MIT"}
keywords = ["parquet", "pyspark", "data", "partitioning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyspark>=4.0.0",
    "python-dateutil>=2.9.0.post0",
]

[project.urls]
Homepage = "https://github.com/yoichiojima-2/carve"
Repository = "https://github.com/yoichiojima-2/carve"
Issues = "https://github.com/yoichiojima-2/carve/issues"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
    "twine>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shardate"]
