[project]
name = "shardate"
version = "2025.9.20.3"
description = "A lightweight Python library for efficiently reading year-month-day partitioned Parquet datasets."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Yoichi Ojima", email = "yoichiojima@gmail.com"}
]
license = {text = "MIT"}
keywords = ["parquet", "pyspark", "data", "partitioning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "build>=1.3.0",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "coverage>=7.10.6",
    "docutils>=0.22.1",
    "id>=1.5.0",
    "idna>=3.10",
    "iniconfig>=2.1.0",
    "jaraco-classes>=3.4.0",
    "jaraco-context>=6.0.1",
    "jaraco-functools>=4.3.0",
    "keyring>=25.6.0",
    "markdown-it-py>=4.0.0",
    "mdurl>=0.1.2",
    "more-itertools>=10.8.0",
    "mypy>=1.18.2",
    "mypy-extensions>=1.1.0",
    "nh3>=0.3.0",
    "packaging>=25.0",
    "pathspec>=0.12.1",
    "pluggy>=1.6.0",
    "py4j>=0.10.9.9",
    "pygments>=2.19.2",
    "pyproject-hooks>=1.2.0",
    "pyspark>=4.0.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "readme-renderer>=44.0",
    "requests>=2.32.5",
    "requests-toolbelt>=1.0.0",
    "rfc3986>=2.0.0",
    "rich>=14.1.0",
    "ruff>=0.13.1",
    "six>=1.17.0",
    "twine>=6.2.0",
    "types-python-dateutil>=2.9.0.20250822",
    "typing-extensions>=4.15.0",
    "urllib3>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/yoichiojima-2/shardate"
Repository = "https://github.com/yoichiojima-2/shardate"
Issues = "https://github.com/yoichiojima-2/shardate/issues"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.12",
    "twine>=6.2.0",
    "types-python-dateutil>=2.9.0.20250822",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shardate"]
